Feature [Customers] Implementando tabela de cliente no banco de dados e ajustando o módulo do mesmo
